The bot will message the owner after updating itself with k!update.
Also, added "updated" console command to the bot itself and "beta"
command to the updater.